fix : overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 body{
     background-color: #1f1e1e;
     color :#fff;
-    overflow: hidden;
+    overflow-y: scroll ;
 }
 
 h1{
